2002-04-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* sheet-object-widget.c (cb_checkbox_config_cancel_clicked) : new
	(cb_checkbox_config_ok_clicked) replaces cb_scrollbar_config_clicked
	(sheet_widget_checkbox_user_config) : don't use GnomeDialog

2002-04-09  Morten Welinder  <terra@diku.dk>

	* src/rendered-value.c (rendered_value_new,
 	rendered_value_destroy, rendered_value_init,
 	rendered_value_shutdown): Yet another pool allocator.

2002-04-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-canvas.c (gnm_canvas_key_mode_object) : Sheet objects 
	  are GObjects
	* src/item-grid.c (ig_obj_create_finish) : unref the object since
	  scg_mode_edit_object might not pick up the reference
	* src/sheet-control-gui.c (scg_object_stop_editing) : unref the 
	  sheet object
	(scg_mode_edit_object) : ref the object if we store a reference
	* src/workbook-control-gui.c (cb_edit_cut) :  Sheet objects 
	  are GObjects

2002-04-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* sheet-object-widget.c (cb_scrollbar_config_cancel_clicked) : new
	(cb_scrollbar_config_ok_clicked) replaces cb_scrollbar_config_clicked
	(sheet_widget_scrollbar_user_config) : don't use GnomeDialog

2002-04-09  Morten Welinder  <terra@diku.dk>

	* configure.in (bind_textdomain_codeset): Add -lintl when needed.

	* src/workbook-control-gui.c: s/E_qual/_Equal/.

2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/workbook-control-gui.c (hide_show_detail_real) : new
	(group_ungroup_colrow_real) : new
	(hide_show_detail) : use dialog_col_row
	(group_ungroup_colrow) : use dialog_col_row

2002-04-08  Morten Welinder  <terra@diku.dk>

	* src/expr.c (cb_expression_pool_leak): New function.
	(expr_shutdown): Show leaking expressions.

	* src/validation.c (validation_eval): Plug leaks.

2002-04-08  Jon K Hellan  <hellan@acm.org>

	* configure.in: Test for <wctype.h>

	* src/stf-parse.c: Include <wctype.h> only if present.

2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>
